Added an image to the site

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, quo corrupti sequi magnam recusandae dolor nam doloremque, officiis est, minima cum necessitatibus officia aut obcaecati itaque dolorum quidem tempore magni!
         </p>
     </section>
+
+
+    <img src="/assets/pexels-christina-morillo-1181529.jpg">
 </body>
 
 </html>
